@@ -135,25 +135,25 @@ void CurrentCostMeterSerial::Do_Work()
 //Webserver helpers
 namespace http {
 	namespace server {
-		char * CWebServer::SetCurrentCostUSBType(WebEmSession & session, const request& req)
+		void CWebServer::SetCurrentCostUSBType(WebEmSession & session, const request& req, std::string & redirect_uri)
 		{
-			m_retstr = "/index.html";
+			redirect_uri = "/index.html";
 			if (session.rights != 2)
 			{
 				//No admin user, and not allowed to be here
-				return (char*)m_retstr.c_str();
+				return;
 			}
 
 			std::string idx = request::findValue(&req, "idx");
 			if (idx == "") {
-				return (char*)m_retstr.c_str();
+				return;
 			}
 
 			std::vector<std::vector<std::string> > result;
 
 			result = m_sql.safe_query("SELECT Mode1, Mode2, Mode3, Mode4, Mode5, Mode6 FROM Hardware WHERE (ID='%q')", idx.c_str());
 			if (result.size() < 1)
-				return (char*)m_retstr.c_str();
+				return;
 
 			int Mode1 = atoi(request::findValue(&req, "CCBaudrate").c_str());
 			int Mode2 = 0;
@@ -164,8 +164,6 @@ namespace http {
 			m_sql.UpdateRFXCOMHardwareDetails(atoi(idx.c_str()), Mode1, Mode2, Mode3, Mode4, Mode5, Mode6);
 
 			m_mainworker.RestartHardware(idx);
-
-			return (char*)m_retstr.c_str();
 		}
 	}
 }
